package msg;

message EntityBase {
    optional uint64 id      = 1;
    optional string name    = 2;
    optional string face    = 3;
    optional int32  sex     = 4;
    optional string account = 5;
}

// 简单计数器
message SimpleCounter {
    optional int32 freestep = 1;
    optional int64 givestep = 2;
    optional int64 money_cost = 3;
    optional int64 money_cost_reset = 4;
}

// 免费赠送金币
message FreePresentMoney {
    optional int32 count = 1;
    optional int64 tmrecord = 2;
}

// 微信相关
message UserWechat {
    optional string openid = 1;
}

// 玩家任务
message UserTask {
    repeated TaskData tasks = 1;
}

message TaskData {
    optional int32 id = 1;         // 任务id
    optional int32 progress = 2;   // 本次完成进度
    optional int32 completed = 3;  // 完成标记
}

// 抽奖历史记录
message LuckyDrawItem {
    optional int64 time = 1;
    optional int32 item = 2;
    optional int32 num = 3;
    optional int32 worth = 4;
}
message LuckyDrawRecord {
    repeated LuckyDrawItem drawlist = 1;    // 历史记录列表
    optional int64 totalvalue = 2;          // 总价值
}

// 形象信息
message ImageData {
    optional int32 sex = 1;
    repeated ItemData clothes = 2;
}

// 个人形象
message PersonalImage {
    repeated ImageData lists = 2;
}

message UserBase {
    optional uint32     level   = 1;
    optional uint32     exp     = 2;
    optional uint32     gold    = 3;    // 金币
    optional uint32     diamond = 4;    // 钻石
    optional uint32     yuanbao = 5;    // 元宝
    optional int64      tmlogin  = 6;   // 登陆时间
    optional int64      tmlogout = 7;   // 离线时间
    optional uint32     continuelogin = 8;  // 连续登陆
    optional uint32     nocountlogin = 9;   // 不统计
    optional uint32     signreward  = 10;   // 签到
    optional uint32     signtime    = 11;   // 签到时间
    repeated UserAddress addrlist   = 12;   // 地址列表
    optional SimpleCounter scounter = 13;   // 简单计数器
    optional UserWechat wechat = 14;
    optional string     invitationcode = 15;    // 邀请码
    optional FreePresentMoney freepresent = 16;
    optional UserTask   task = 17;          // 任务
    optional LuckyDrawRecord luckydraw = 18;   // 抽奖
    optional uint32     total_recharge = 19; // 总充值
    optional PersonalImage images = 20;     // 个人形象
}

message UserAddress {
    optional string receiver = 1;
    optional string phone = 2;
    optional string address = 3;
}

message ItemData {
    optional uint32 id = 1;     // 目前id就是道具baseid
    optional uint32 num = 2;
    optional int32 pos = 3;     // ItemPos
}

message ItemBin {
    repeated ItemData items = 1;        // 
}

message Serialize {
    optional EntityBase entity  = 1;
    optional UserBase   base    = 2;
    optional ItemBin    item    = 3;
}


