package msg;
import "serialize.proto";

// 添加收货地址
message C2GW_AddDeliveryAddress {
    optional msg.UserAddress info = 1;
}

// 删除地址
message C2GW_DelDeliveryAddress {
    optional uint32 index = 1;
}

// 修改地址
message C2GW_ChangeDeliveryAddress {
    optional uint32 index = 1;
    optional msg.UserAddress info = 2;
}

// 同步地址列表
message GW2C_SendDeliveryAddressList {
    repeated msg.UserAddress list = 1;
}

// 请求充值页面
message C2GW_ReqRechargeMoney {
    optional uint32 amount = 1;
    optional string token = 2;
    optional uint32 type = 3;
}

// 返回充值请求
message GW2C_RetRechargeMoney {
    optional string urlcheckout = 1;
}

// 红包平台充值完成通知
message C2GW_PlatformRechargeDone {
    optional uint64 userid = 1;
}

// 同步玩家绑定微信信息
message GW2C_SendWechatInfo {
    optional string openid = 1;
}

// 抽奖
message C2GW_StartLuckyDraw {
    optional uint64 userid = 1;
}

message GW2C_LuckyDrawHit {
    optional int32 id = 1;
}

// 免费赠送金币
message GW2C_FreePresentNotify {
    optional int32 money = 1;
}

// 发送任务列表
message GW2C_SendTaskList {
    repeated msg.TaskData tasks = 1;
}

// 抽奖历史记录
message GW2C_SendLuckyDrawRecord {
    optional LuckyDrawRecord luckydraw = 1;
}


