syntax = "proto2";
package msg;

// 房间简单信息
message TexasRoomSimpleInfo {
    optional int64 id = 1;          //房间uid
    optional int32 player = 2;      //房间当前人数
    optional int32 roomId = 3;      //房间配置id
    optional bool  hasPwd = 4;      //是否有密码
}

// 请求房间列表
message C2GW_ReqTexasRoomList {
    optional int32 type = 1;        //房间类型
}

// 返回
message GW2C_RetTexasRoomList {
    repeated TexasRoomSimpleInfo list = 1;
}

// 私人场房间
message TexasPersonalRoom {
    optional int32 roomId = 1;
    optional int32 ante = 2;
    optional string pwd = 3;
}

// 请求自己房间列表
message C2GW_ReqUserRoomInfo {
}

// 返回玩家房间信息
message GW2C_RetUserRoomInfo {
    optional int64 roomid = 1;
    optional int32 tid  = 2;
    optional string passwd = 3;
}

//请求周竞猜榜单
message C2GW_ReqGuessRank {
}

message GuessRankInfo {
    optional int32 rank = 1;
    optional string name = 2;
    optional int32 ante = 3;
    optional int64 gold = 4;
}

//返回周竞猜榜单
message GW2C_RetGuessRank {
    repeated GuessRankInfo list = 1;
}

//请求竞猜记录
message C2GW_ReqGuessRecord {
}

message GuessRecordInfo {
    optional int32 type = 1;
    optional int64 ante = 2;
    optional int64 gold = 3;
    optional int32 time = 4;
    repeated int32 cards = 5;
}

//返回购买记录
message GW2C_RetGuessRecord {
    repeated GuessRecordInfo list = 1;
}

